--- a/sintaxe.html
+++ b/sintaxe.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
- <body>
-
+ <head>
+     <style>
+        body{
+            background-color:rgb(14, 0, 171)
+        }
+     </style>
  </head>
- <body>
+    <body>
+         <div class="site">
+             <div class="header">
 
- </body>
+             </div>
+             <div class="main">
+                <dive class="esquerda">
+            
+                </dive>
+                <dive class="centro">
+
+                </dive>
+                <dive class="direita">
+
+                </dive>
+             </div>
+             <div class="footer">
+
+            </div>
+         </div>
+    </body>
 </html>
