--- a/sintaxe.html
+++ b/sintaxe.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
- <head>
-     <style>
-        body{
-            background-color:rgb(14, 0, 171)
-        }
-     </style>
- </head>
-    <body>
-         <div class="site">
-             <div class="header">
+  <head>
+      <style>
+          body{
+            background-color:#3a0232 ;
+          }
+          .site{
+            width:inherit;
+            height:685px;
 
-             </div>
-             <div class="main">
-                <dive class="esquerda">
-            
-                </dive>
-                <dive class="centro">
+          }
+          .header{
+            width:inherit;
+        height:100px;
+    background-color:blanchedalmond          }
+    .main{
+        width:inherit;
+        height:515px;
+        background-color:rgb(133, 2, 138)
+    }
+    .footer{
+        width:inherit;
+        height:70px;
+    background-color:rgb(255, 255, 255) 
+    }
+      </style>
+  </head>
+  <body>
+    <div class="site">
+        <div class="header">
 
-                </dive>
-                <dive class="direita">
-
-                </dive>
-             </div>
-             <div class="footer">
+        </div>
+        <div class="main">
+            <div class="esquerda">
 
             </div>
-         </div>
-    </body>
+            <div class="centro">
+
+            </div>
+            <div class="direita">
+
+            </div>
+        </div>
+        <div class="footer">
+
+        </div>
+      </div>
+  </body>
 </html>
