--- a/sintaxe.html
+++ b/sintaxe.html
@@ -6,25 +6,47 @@
             background-color:#3a0232 ;
           }
           .site{
-            width:inherit;
+            width:1000px;
             height:685px;
 
           }
           .header{
             width:inherit;
-        height:100px;
-    background-color:blanchedalmond          }
-    .main{
+            height:100px;
+            background-color:rgb(255, 255, 255)          
+          }  
+          .main{
         width:inherit;
         height:515px;
-        background-color:rgb(133, 2, 138)
-    }
-    .footer{
+        background-color:rgb(247, 0, 255)
+          }
+          .footer{
         width:inherit;
         height:70px;
-    background-color:rgb(255, 255, 255) 
+         background-color:rgb(255, 255, 255) 
     }
-      </style>
+    .esquerda{
+        width:200px;
+        height:inherit;
+        background-color:rgb(247, 0, 255);
+        display:inline-block;
+        float:right;
+    }
+    .centro{
+        width:600px;
+        height:inherit;
+        background-color:rgb(0, 0, 0);
+        display:inline-block;
+        float:right;
+    }
+    .direita{
+        width:200px;
+        height:inherit;
+        background-color:rgb(230, 0, 255);
+        display:inline-block;
+        float:right;
+    }
+          </style>
   </head>
   <body>
     <div class="site">
@@ -39,6 +61,11 @@
 
             </div>
             <div class="direita">
+              <div class="direita1">
+                <div class="direita2">
+
+                </div>
+              </div>
 
             </div>
         </div>
