--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
           .header{
             width:inherit;
             height:100px;
-            background-color:rgb(255, 255, 255)          
+            background-color:rgb(255, 255, 255); 
+            background-image: url("https://i.ytimg.com/vi/Px5Ibu7fBIs/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAv5FKxlRc5W56HJopUr5TrhSDPSg");     
           }  
           .main{
         width:inherit;
@@ -45,7 +46,7 @@
         height:inherit;
         background-color:rgb(230, 0, 255);
         display:inline-block;
-        float:right;
+        float:right;    
     }
           </style>
   </head>
@@ -59,12 +60,13 @@
 
             </div>
             <div class="centro">
-
+             <img src="">
+             <input type="image" src="https://i.ytimg.com/vi/Px5Ibu7fBIs/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAv5FKxlRc5W56HJopUr5TrhSDPSg" width="220px" height="">
             </div>
             <div class="direita">
               <div class="direita1">
                 <div class="direita2">
-
+                
                 </div>
               </div>
 
@@ -76,4 +78,3 @@
       </div>
   </body>
 </html>
-
