--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="PT-BR">
   <head>
@@ -16,7 +17,8 @@
             height:100px;
             background-color:rgb(255, 255, 255); 
             background-image: url("https://i.ytimg.com/vi/Px5Ibu7fBIs/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAv5FKxlRc5W56HJopUr5TrhSDPSg");     
-          }  
+            background-size:100%;
+          }
           .main{
         width:inherit;
         height:515px;
@@ -25,7 +27,8 @@
           .footer{
         width:inherit;
         height:70px;
-         background-color:rgb(255, 255, 255) 
+        background: rgb(5,5,5);
+        background: radial-gradient(circle, rgba(5,5,5,1) 0%, rgba(167,167,167,1) 32%, rgba(0,0,0,1) 65%);
     }
     .esquerda{
         width:200px;
@@ -48,6 +51,12 @@
         display:inline-block;
         float:right;    
     }
+    .foto_mural_1{
+        width: 100%;
+        height:100%;
+        background-image:url("https://i.pinimg.com/236x/ab/cc/98/abcc989fb41f372ea3f481b673eaf14e.jpg");
+        background-size:100%;
+    }
           </style>
   </head>
   <body>
@@ -60,20 +69,17 @@
 
             </div>
             <div class="centro">
-             <img src="">
-             <input type="image" src="https://i.ytimg.com/vi/Px5Ibu7fBIs/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAv5FKxlRc5W56HJopUr5TrhSDPSg" width="220px" height="">
+                <div class="foto_mural_1"></div>
             </div>
             <div class="direita">
               <div class="direita1">
                 <div class="direita2">
-                
+        
                 </div>
               </div>
-
             </div>
         </div>
         <div class="footer">
-
         </div>
       </div>
   </body>
