--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
   <head>
+    <title>OPEL VECTRA</title>
       <style>
           body{
             background-color:#3a0232 ;
@@ -33,29 +34,44 @@
     .esquerda{
         width:200px;
         height:inherit;
-        background-color:rgb(247, 0, 255);
+        background-color:rgb(255, 255, 255);
         display:inline-block;
         float:right;
     }
     .centro{
         width:600px;
         height:inherit;
-        background-color:rgb(0, 0, 0);
+        background-color:rgb(255, 255, 255);
         display:inline-block;
         float:right;
     }
     .direita{
         width:200px;
         height:inherit;
-        background-color:rgb(230, 0, 255);
+        background-color:rgb(255, 255, 255);
         display:inline-block;
         float:right;    
     }
     .foto_mural_1{
         width: 100%;
-        height:100%;
+        height:80%;
         background-image:url("https://i.pinimg.com/236x/ab/cc/98/abcc989fb41f372ea3f481b673eaf14e.jpg");
         background-size:100%;
+    }
+    .esquerda_foto{
+        width:100px;
+        height:310px; 
+        background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdk0vfzNaW_D7hjSczz4354gAZJxX9E3UEBg&s);
+        margin-left:50px;
+        margin-top:100px;
+    }
+    .direita_foto{
+        width:100px;
+        height:310px;
+        background-image: url("https://media.gettyimages.com/id/2174115753/pt/foto/alexander-burgstaller-from-germany-drives-the-opel-team-am-holzer-opel-vectra-during-the-1997.jpg?s=612x612&w=gi&k=20&c=HEFso-khVTaLCNzTEavjONofeXZVXnzTAoC6aO6yZAo=");
+        margin-left:50px;
+        margin-top:100px;
+
     }
           </style>
   </head>
@@ -66,16 +82,23 @@
         </div>
         <div class="main">
             <div class="esquerda">
+                <h1></h1>
+                <div class="esquerda_foto">
+                    <h5></h5>
 
+                </div>
             </div>
             <div class="centro">
+                <h1>TEÇA OPEL VECTRA</h1>
                 <div class="foto_mural_1"></div>
+                <h5>Taça opel vectra motorsport</h5>
             </div>
             <div class="direita">
-              <div class="direita1">
-                <div class="direita2">
-        
+             <h1>TAÇA OPEL</h1>   
+              <div class="direita_foto">
+
                 </div>
+                <h5>citcuito gran pri mundial</h5>
               </div>
             </div>
         </div>
