--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="PT-BR">
   <head>
@@ -82,11 +83,11 @@
         </div>
         <div class="main">
             <div class="esquerda">
-                <h1></h1>
-                <div class="esquerda_foto">
-                    <h5></h5>
+                <h1>teste</h1>
+                <div class="esquerda_foto"></div>
+                    <h5>teste</h5>
 
-                </div>
+                
             </div>
             <div class="centro">
                 <h1>TEÇA OPEL VECTRA</h1>
