--- a/link.html
+++ b/link.html
@@ -7,6 +7,19 @@
           </style>
   </head>
   <body>
-  
+        <ul>
+            <li><a href="https://www.google.com/search?q=www&rlz=1C1GCEA_enBR1120BR1120&oq=www&gs_lcrp=EgZjaHJvbWUyDwgAEEUYORiDARixAxiABDIHCAEQABiABDIHCAIQABiABDIHCAMQABiABDIGCAQQBRgsMgYIBRAFGCwyBggGEAUYLDIGCAcQBRgs0gEJMTYwNjdqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8&sei=Yk4raOy5M-2H4dUP34XYwAo">google</a></li>
+            <li><a href="https://www.facebook.com/?locale=pt_BR">facebook</a></li>
+            <li><a href="https://www.instagram.com/">instagram</a></li>
+            <li><a href="https://www.kwai.com/">kwai</a></li>
+            <li><a href="https://www.tiktok.com/pt-BR/">tik tok</a></li>
+        </ul>
+        <ol>
+            <li>google</li>
+            <li>facebook</li>
+            <li>instagram</li>
+            <li>kwai</li>
+            <li>tik tok</li>
+        </ol>
   </body>
 </html>
