--- a/link.html
+++ b/link.html
@@ -3,8 +3,33 @@
 <html lang="PT-BR">
   <head>
       <style>
-          
-          </style>
+          .youtube{
+                width:;100px
+                heigth:;100px
+                backgroud-image: url("")
+          }
+          .g1[
+                width:;100px
+                heigth:;100px
+                backgroud-image: url("")
+          ]
+          .kwai{
+                width:;100px
+                heigth:;100px
+                backgroud-image: url("")
+          }
+          .google[
+                width:;100px
+                heigth:;100px
+                backgroud-image: url("")
+          ]
+          .ge{
+                width:;100px
+                heigth:;100px
+                backgroud-image: url("")
+          }
+
+      </style>
   </head>
   <body>
         <ul>
@@ -15,11 +40,11 @@
             <li><a href="https://www.tiktok.com/pt-BR/">tik tok</a></li>
         </ul>
         <ol>
-            <li>google</li>
-            <li>facebook</li>
-            <li>instagram</li>
-            <li>kwai</li>
-            <li>tik tok</li>
+            <li>youtube<div class="youtube"></div></li>
+            <li>g1<div class="g1"></div></li>
+            <li>kwai<div class="kwai"></div></li>
+            <li>google<div class="google"></div></li>
+            <li>globo esporte<div class="ge"></div></li>
         </ol>
   </body>
 </html>
