--- a/link.html
+++ b/link.html
@@ -44,17 +44,20 @@
   </head>
   <body>
         <ul>
-            <li><a href="https://www.google.com/search?q=www&rlz=1C1GCEA_enBR1120BR1120&oq=www&gs_lcrp=EgZjaHJvbWUyDwgAEEUYORiDARixAxiABDIHCAEQABiABDIHCAIQABiABDIHCAMQABiABDIGCAQQBRgsMgYIBRAFGCwyBggGEAUYLDIGCAcQBRgs0gEJMTYwNjdqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8&sei=Yk4raOy5M-2H4dUP34XYwAo">google</a></li>
-            <li><a href="https://www.facebook.com/?locale=pt_BR">facebook</a></li>
-            <li><a href="https://www.instagram.com/">instagram</a></li>
-            <li><a href="https://www.kwai.com/">kwai</a></li>
-            <li><a href="https://www.tiktok.com/pt-BR/">tik tok</a></li>
+            <li><a href="https://www.google.com/search?q=www&rlz=1C1GCEA_enBR1120BR1120&oq=www&gs_lcrp=EgZjaHJvbWUyDwgAEEUYORiDARixAxiABDIHCAEQABiABDIHCAIQABiABDIHCAMQABiABDIGCAQQBRgsMgYIBRAFGCwyBggGEAUYLDIGCAcQBRgs0gEJMTYwNjdqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8&sei=Yk4raOy5M-2H4dUP34XYwAo">google</a></li></br></br><hr>
+            <li><a href="https://www.facebook.com/?locale=pt_BR">facebook</a></li></br></br><hr>
+            <li><a href="https://www.instagram.com/">instagram</a></li></br></br><hr>
+            <li><a href="https://www.kwai.com/">kwai</a></li></br></br><hr>
+            <li><a href="https://www.tiktok.com/pt-BR/">tik tok</a></li></br></br><hr>
         </ul>
+        <fieldset>
+            <legend>Cadastro de Alunos</legend>
+        </fieldset>
         <ol>
-            <li>youtube<a href=""></a><div class="youtube"></div></li>
-            <li>g1<a href=""></a><div class="g1"></div></li>
-            <li>kwai<a href=""></a><div class="kwai"></div></li>
-            <li>google<a href=""><div class="google"></div></a></li>
+            <li>youtube<a href="https://www.youtube.com/"><div class="youtube"></div></a></li>
+            <li>g1<a href="https://g1.globo.com/"><div class="g1"></div></a></li>
+            <li>kwai<a href="https://www.kwai.com/"><div class="kwai"></div></a></li>
+            <li>google<a href="https://www.google.com.br/?hl=pt-BR"><div class="google"></div></a></li>
             <li>globo esporte<a href="https://ge.globo.com/"><div class="ge"></div></a></li>
         </ol>
   </body>
