--- a/Agrinho.html
+++ b/Agrinho.html
@@ -1,1 +1,78 @@
 
+<!DOCTYPE html>
+<html lang="PT-BR">
+  <head>
+      <style>
+          body{
+            background-color:#3a0232 ;
+          }
+          .site{
+            width:1000px;
+            height:685px;
+
+          }
+          .header{
+            width:inherit;
+            height:100px;
+            background-color:rgb(255, 255, 255)          
+          }  
+          .main{
+        width:inherit;
+        height:515px;
+        background-color:rgb(247, 0, 255)
+          }
+          .footer{
+        width:inherit;
+        height:70px;
+         background-color:rgb(255, 255, 255) 
+    }
+    .esquerda{
+        width:200px;
+        height:inherit;
+        background-color:rgb(247, 0, 255);
+        display:inline-block;
+        float:right;
+    }
+    .centro{
+        width:600px;
+        height:inherit;
+        background-color:rgb(0, 0, 0);
+        display:inline-block;
+        float:right;
+    }
+    .direita{
+        width:200px;
+        height:inherit;
+        background-color:rgb(230, 0, 255);
+        display:inline-block;
+        float:right;
+    }
+          </style>
+  </head>
+  <body>
+    <div class="site">
+        <div class="header">
+
+        </div>
+        <div class="main">
+            <div class="esquerda">
+
+            </div>
+            <div class="centro">
+
+            </div>
+            <div class="direita">
+              <div class="direita1">
+                <div class="direita2">
+
+                </div>
+              </div>
+
+            </div>
+        </div>
+        <div class="footer">
+
+        </div>
+      </div>
+  </body>
+</html>
