--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
           
           </style>
   </head>
+  body{
+       backgroud-color: black;
+  }
+  fieldset{
+  border: 1pxsolid red;
+  }
+  legend(
+  color: yellow;
+  )
   <body>
     <fieldset>
       <legend>QUEM SOU EU?</legend>
       <p>
-        
+        E chamo bruno, tenho18 anos, sou mecanico automotivo.  
       </p>
       <fieldset>
         <legend>MEUS PROJETOS</legend>
